Исправления для проверки линтера.

--- a/source/sass/blocks/photo-album.scss
+++ b/source/sass/blocks/photo-album.scss
@@ -1,9 +1,9 @@
 .card {
-  border-bottom: 1px groove #E5E5E5 ;
+  border-bottom: 1px groove #e5e5e5;
 }
 
 .photo-album__cover {
-  background: url('/img/bg-back-mobile@1x.jpg') no-repeat;
+  background: url("/img/bg-back-mobile@1x.jpg") no-repeat;
 }
 
 .photo-album__title {
