--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -3,12 +3,10 @@
   font-size: 18px;
   line-height: 26px;
   text-transform: uppercase;
-  font-family: PT Sans, Arial, sans-serif;
+  font-family: "PT Sans", "Arial", sans-serif;
 }
 
 .page__body {
   min-height: 100%;
   margin: 0;
-
-
 }
