Исправления базовой верстки.

--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,12 +1,1 @@
-.hashtag__text {
-  font-size: 21px;
-  font-weight: bold;
-}
-
-.copyright__text {
-  font-size: 14px;
-}
-
-.copyright {
-  display: flex;
-}
+// Стили для блока footer
