--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -4,11 +4,11 @@
 
 .site-list__link {
   text-decoration: none;
-  color: hsl(0, 0%, 100%);
+  color: #ffffff;
 }
 
 .page-header {
-  background-color: hsl(0, 0%, 100%);
+  background-color: #ffffff;
 }
 
 .page-header__logo {
