--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,5 +1,4 @@
 // Colors
-
-$main-color: hsl(203, 47%, 66%);
-$white-color: hsl(0, 0%, 100%);
-$grey-color: hsl(0, 0%, 93%);
+$main-color: #81b3d2;
+$white-color: #ffffff;
+$grey-color: #eeeeee;
