--- a/source/sass/blocks/photo-album.scss
+++ b/source/sass/blocks/photo-album.scss
@@ -3,7 +3,8 @@
 }
 
 .photo-album__cover {
-  background: url("/img/bg-back-mobile@1x.jpg") no-repeat;
+  background: url("../img/bg-back-mobile@1x.jpg") no-repeat;
+  background-color: #81b3d2;
 }
 
 .photo-album__title {
