--- a/source/sass/global/fonts.scss
+++ b/source/sass/global/fonts.scss
@@ -3,8 +3,8 @@
   font-weight: normal;
   font-style: normal;
   font-display: swap;
-  src: url("../source/fonts/ptsans.woff") format("woff");
-  src: url("../source/fonts/ptsans.woff2") format("woff2");
+  src: url("../fonts/ptsans.woff") format("woff");
+  src: url("../fonts/ptsans.woff2") format("woff2");
 }
 
 @font-face {
@@ -12,6 +12,6 @@
   font-weight: bold;
   font-style: normal;
   font-display: swap;
-  src: url("../source/fonts/ptsansbold.woff") format("woff");
-  src: url("../source/fonts/ptsansbold.woff2") format("woff2");
+  src: url("../fonts/ptsansbold.woff") format("woff");
+  src: url("../fonts/ptsansbold.woff2") format("woff2");
 }
