--- a/source/sass/blocks/photo-album.scss
+++ b/source/sass/blocks/photo-album.scss
@@ -1,20 +1,12 @@
-.card {
-  border-bottom: 1px groove #e5e5e5;
-}
-
 .photo-album__cover {
   background: url("../img/bg-back-mobile@1x.jpg") no-repeat;
   background-color: #81b3d2;
 }
 
 .photo-album__title {
-  font-size: 18px;
+  @include font-titles-black;
 }
 
-.card__title {
-  font-size: 14px;
-}
-
-.card__author-name {
-  text-transform: none;
+.photo-album__text {
+  line-height: 24px;
 }
