--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,15 +16,26 @@
 @import "blocks/city-item.scss";
 @import "blocks/facilities.scss";
 @import "blocks/bridge-item.scss";
+@import "blocks/search-section.scss";
 
 // Blocks page photo.html
 @import "blocks/photo-album.scss";
 @import "blocks/card.scss";
+@import "blocks/intro-video.scss";
 
 // Blocks page form.html
 @import "blocks/review-intro.scss";
+@import "blocks/client-review.scss";
+@import "blocks/review-form.scss";
+@import "blocks/introduce-fieldset.scss";
+@import "blocks/contacts-fieldset.scss";
+@import "blocks/impressions-fieldset.scss";
+@import "blocks/places-fieldset.scss";
+@import "blocks/check-block.scss";
+@import "blocks/comments-fieldset.scss";
 
 // Blocks footer
 @import "blocks/page-footer.scss";
 @import "blocks/hashtag.scss";
 @import "blocks/copyright.scss";
+@import "blocks/social.scss";
