--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -1,3 +1,4 @@
+// Оформление стилей шрифта
 @mixin font-header-mobil {
   font-size: 18px;
   line-height: 40px;
@@ -16,4 +17,23 @@
   font-size: 18px;
   font-weight: bold;
   line-height: 26px;
+}
+
+// Оформление кнопок
+@mixin style-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 21px;
+  line-height: 26px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 49px;
+  width: 280px;
+  min-height: 58px;
+  background-color: $main-color;
+  color: $white-color;
+  border: none;
 }
