--- a/source/sass/blocks/check-block.scss
+++ b/source/sass/blocks/check-block.scss
@@ -6,6 +6,7 @@
     height: 48px;
     border-radius: 4px;
   }
+
   &__input-square::before {
     content: "";
     width: 23px;
@@ -13,6 +14,6 @@
     position: absolute;
     top: 31%;
     right: 25%;
-    background-image: url(../../img/icon-tick.svg);
+    background-image: url(""../../img/icon-tick.svg");
   }
 }
