--- a/source/sass/blocks/check-block.scss
+++ b/source/sass/blocks/check-block.scss
@@ -14,6 +14,6 @@
     position: absolute;
     top: 31%;
     right: 25%;
-    background-image: url(""../../img/icon-tick.svg");
+    background-image: url("../img/icon-tick.svg");
   }
 }
