--- a/source/sass/blocks/comments-fieldset.scss
+++ b/source/sass/blocks/comments-fieldset.scss
@@ -3,6 +3,10 @@
   @include font-titles-black;
 }
 
+.comments-fieldset {
+  border: 0 none;
+}
+
 .comments-fieldset__input {
   background-color: $grey-color;
 }
