--- a/source/sass/blocks/check-block.scss
+++ b/source/sass/blocks/check-block.scss
@@ -1,13 +1,11 @@
-.check-block {
-  &__input-square {
-    position: relative;
-    background-color: #f2f2f2f2;
-    width: 48px;
-    height: 48px;
-    border-radius: 4px;
-  }
+.check-block__input-square {
+  position: relative;
+  background-color: #f2f2f2f2;
+  width: 48px;
+  height: 48px;
+  border-radius: 4px;
 
-  &__input-square::before {
+  ::before {
     content: "";
     width: 23px;
     height: 16px;
