--- a/source/sass/blocks/places-fieldset.scss
+++ b/source/sass/blocks/places-fieldset.scss
@@ -2,6 +2,10 @@
   @include font-titles-black;
 }
 
+.places-fieldset {
+  border: 0 none;
+}
+
 .check-block__label {
   @include font-titles-black;
   text-transform: none;
