--- a/source/sass/blocks/bridge-item.scss
+++ b/source/sass/blocks/bridge-item.scss
@@ -1,8 +1,15 @@
-.bridge-item {
-  background-color: #81b3d2;
-  color: #ffffff;
+.bridge-item__description {
+  background-color: $main-color;
+  color: $white-color;
 }
 
 .bridge-item__title {
   @include font-titles-white;
+}
+
+.bridge-item__section {
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
 }
