--- a/source/sass/blocks/card.scss
+++ b/source/sass/blocks/card.scss
@@ -1,5 +1,9 @@
 .card {
   border-bottom: 1px groove #e5e5e5;
+
+  @media (min-width: $tablet-width) {
+    border-bottom: none;
+  }
 }
 
 .card__title {
