--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,4 +1,10 @@
 // Colors
 $main-color: #81b3d2;
 $white-color: #ffffff;
+$black-color: #000000;
 $grey-color: #eeeeee;
+
+// Viewports
+$mobile-width-only: 767px;
+$tablet-width: 768px;
+$desktop-width: 1200px;
