--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,12 +16,20 @@
 @import "blocks/city-item.scss";
 @import "blocks/facilities.scss";
 @import "blocks/bridge-item.scss";
+@import "blocks/square-item.scss";
+@import "blocks/road-item.scss";
+@import "blocks/tourists-item.scss";
 @import "blocks/search-section.scss";
 
 // Blocks page photo.html
 @import "blocks/photo-album.scss";
 @import "blocks/card.scss";
 @import "blocks/intro-video.scss";
+@import "blocks/cards-section.scss";
+@import "blocks/vast-card.scss";
+@import "blocks/plants-card.scss";
+@import "blocks/road-card.scss";
+@import "blocks/bridge-card.scss";
 
 // Blocks page form.html
 @import "blocks/review-intro.scss";
