--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,8 +1,17 @@
 .page-header {
+  display: flex;
+  flex-direction: column;
   @include font-header-mobil;
-  background-color: #ffffff;
 }
 
 .page-header__logo {
-  height: 94px;
+  height: 84px;
+
+  @media (min-width: $tablet-width) {
+    height: 84px;
+  }
+
+  @media (min-width: $desktop-width) {
+    height: 97px;
+  }
 }
