Исправления верстки адаптивных сеток.

--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,4 +1,4 @@
 .intro {
   background: url("../img/bg-back-mobile@1x.jpg") no-repeat;
-  background-color: #81b3d2;
+  background-color: $main-color;
 }
