--- a/source/sass/blocks/cards-section.scss
+++ b/source/sass/blocks/cards-section.scss
@@ -1,13 +1,12 @@
 .cards-section {
   @media (min-width: $tablet-width) {
     display: grid;
-    width: 648px;
+    width: 100%;
     grid-template-columns: 324px 324px;
     grid-template-rows: 480px 347px 347px;
   }
 
   @media (min-width: $desktop-width) {
-    display: grid;
     width: 100%;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 400px 267px;
