--- a/source/sass/blocks/photo-album.scss
+++ b/source/sass/blocks/photo-album.scss
@@ -1,6 +1,6 @@
 .photo-album__cover {
   background: url("../img/bg-back-mobile@1x.jpg") no-repeat;
-  background-color: #81b3d2;
+  background-color: $main-color;
 }
 
 .photo-album__title {
