--- a/source/sass/blocks/plants-card.scss
+++ b/source/sass/blocks/plants-card.scss
@@ -13,16 +13,17 @@
 
 .plants-card__content {
   @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
     background-color: $grey-color;
   }
 
   @media (min-width: $desktop-width) {
+    flex-direction: row;
+    width: 100%;
     background-color: $black-color;
     opacity: 30%;
-    width: 100%;
     color: $white-color;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
   }
 }
