--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,8 +1,23 @@
 .main-nav {
   background-color: $main-color;
+  position: relative;
+  width: auto;
 
   @media (min-width: $tablet-width) {
     background-color: $white-color;
+  }
+}
+
+// Базовые стили для кнопки переключения мобильного меню
+.main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  cursor: auto;
+
+  @media (min-width: $tablet-width) {
+    display: none;
   }
 }
 
@@ -47,9 +62,5 @@
     justify-content: space-between;
     width: 1069px;
     margin: 0 auto;
-  }
-
-  .main-nav__toggle {
-    display: none;
   }
 }
