--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -9,3 +9,25 @@
     width: 1069px;
   }
 }
+
+// Стилизация ссылок в меню
+.site-list {
+  a {
+    position: relative;
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    padding-top: 10px;
+    padding-bottom: 5px;
+    border-top: 1px solid $white-color;
+    border-bottom: 1px solid $black-color;
+
+    @media (min-width: $tablet-width) {
+      padding-top: 16px;
+      padding-bottom: 14px;
+
+      background: none;
+      border: none;
+    }
+  }
+}
