--- a/source/sass/blocks/bridge-card.scss
+++ b/source/sass/blocks/bridge-card.scss
@@ -2,18 +2,19 @@
 .bridge-card {
   @media (min-width: $tablet-width) {
     grid-column: 1 / 2;
-    grid-row: 3 / 4;
   }
 
   @media (min-width: $desktop-width) {
     grid-column: 3 / 4;
-    grid-row: 2 / 3;
   }
 }
 
 .bridge-card__content {
   @media (min-width: $tablet-width) {
     background-color: $grey-color;
+    padding-right: 20px;
+    padding-top: 22px;
+    padding-bottom: 15px;
   }
 
   @media (min-width: $desktop-width) {
