--- a/source/sass/blocks/cards-section.scss
+++ b/source/sass/blocks/cards-section.scss
@@ -1,14 +1,15 @@
 .cards-section {
   @media (min-width: $tablet-width) {
     display: grid;
-    width: 100%;
-    grid-template-columns: 324px 324px;
-    grid-template-rows: 480px 347px 347px;
+    grid-template-columns: 1fr 1fr;
+    margin-top: 65px;
+    padding-left: 60px;
+    padding-right: 60px;
   }
 
-  @media (min-width: $desktop-width) {
-    width: 100%;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 400px 267px;
-  }
+  // @media (min-width: $desktop-width) {
+  //   // width: 100%;
+  //   // grid-template-columns: 1fr 1fr 1fr;
+  //   // grid-template-rows: 400px 267px;
+  // }
 }
