--- a/source/sass/blocks/copyright.scss
+++ b/source/sass/blocks/copyright.scss
@@ -1,9 +1,13 @@
+.copyright {
+  display: flex;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 48px;
+  }
+}
+
 .copyright__text {
   font-size: 14px;
   line-height: 26px;
-}
-
-.copyright {
-  min-width: 150px;
-  display: flex;
+  margin: 0;
 }
