--- a/source/sass/blocks/plants-card.scss
+++ b/source/sass/blocks/plants-card.scss
@@ -2,12 +2,10 @@
 .plants-card {
   @media (min-width: $tablet-width) {
     grid-column: 1 / 2;
-    grid-row: 2 / 3;
   }
 
   @media (min-width: $desktop-width) {
     grid-column: 1 / 2;
-    grid-row: 2 / 3;
   }
 }
 
@@ -15,8 +13,10 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     background-color: $grey-color;
+    padding-left: 20px;
+    padding-top: 22px;
   }
 
   @media (min-width: $desktop-width) {
