--- a/source/sass/blocks/road-card.scss
+++ b/source/sass/blocks/road-card.scss
@@ -3,12 +3,10 @@
 .road-card {
   @media (min-width: $tablet-width) {
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
   }
 
   @media (min-width: $desktop-width) {
     grid-column: 2 / 3;
-    grid-row: 2 / 3;
   }
 }
 
@@ -17,7 +15,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    background-color: $grey-color;
+    background-color: #eaeaea;
   }
 
   @media (min-width: $desktop-width) {
