--- a/source/sass/blocks/vast-card.scss
+++ b/source/sass/blocks/vast-card.scss
@@ -2,12 +2,14 @@
 .vast-card {
   @media (min-width: $tablet-width) {
     grid-column: 1 / 3;
-    grid-row: 1 / 2;
   }
+}
 
-  @media (min-width: $desktop-width) {
-    grid-column: 1 / 4;
-    grid-row: 1 / 2;
+.vast-card__description {
+  @media (min-width: $tablet-width) {
+    padding-left: 20px;
+    padding-top: 22px;
+    padding-bottom: 15px;
   }
 }
 
@@ -15,7 +17,7 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     width: 100%;
     background-color: $grey-color;
   }
@@ -25,5 +27,13 @@
     opacity: 30%;
     width: 100%;
     color: $white-color;
+  }
+}
+
+.vast-card__review {
+  @media (min-width: $desktop-width) {
+    align-self: flex-end;
+    padding-top: 30px;
+    padding-bottom: 26px;
   }
 }
