--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,14 +22,15 @@
 @import "blocks/search-section.scss";
 
 // Blocks page photo.html
-@import "blocks/photo-album.scss";
+@import "blocks/photo-video.scss";
+@import "blocks/album-section.scss";
 @import "blocks/card.scss";
+@import "blocks/bridge-card.scss";
 @import "blocks/intro-video.scss";
 @import "blocks/cards-section.scss";
 @import "blocks/vast-card.scss";
 @import "blocks/plants-card.scss";
 @import "blocks/road-card.scss";
-@import "blocks/bridge-card.scss";
 
 // Blocks page form.html
 @import "blocks/review-intro.scss";
