--- a/source/sass/blocks/intro.scss
+++ b/source/sass/blocks/intro.scss
@@ -1,12 +1,28 @@
 .intro {
-  height: 389px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
   background: url("../img/bg-back-mobile@1x.jpg") no-repeat;
   background-color: $main-color;
   background-position: center;
   background-size: cover;
+  min-height: 389px;
+
+  &::after {
+    content: "";
+    display: block;
+    background-size: cover;
+    background-position: bottom;
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
+    position: absolute;
+    width: 100%;
+    height: 57px;
+    bottom: 0;
+  }
 }
 
-.intro__section {
-  padding-top: 90px;
-  padding-bottom: 85px;
+.intro__img {
+  margin-left: auto;
+  margin-right: auto;
 }
