--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,6 +20,7 @@
 @import "blocks/road-item.scss";
 @import "blocks/tourists-item.scss";
 @import "blocks/search-section.scss";
+@import "blocks/map.scss";
 
 // Blocks page photo.html
 @import "blocks/photo-video.scss";
