--- a/source/sass/blocks/album-section.scss
+++ b/source/sass/blocks/album-section.scss
@@ -5,9 +5,16 @@
 }
 
 .album-section__description {
+  padding-top: 36px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #e5e5e5;
+
   @media (min-width: $tablet-width) {
-    padding-left: 155px;
-    padding-right: 170px;
+    padding-top: 12px;
+    padding-left: 143px;
+    padding-right: 143px;
+
+    border: none;
   }
 }
 
@@ -15,10 +22,21 @@
   @include font-titles-black;
   text-align: center;
   margin: 0;
+
+  @media (min-width: $tablet-width) {
+    font-size: 30px;
+  }
 }
 
 .album-section__text {
   line-height: 24px;
   text-align: center;
   margin: 0;
+  padding-top: 26px;
+  padding-left: 25px;
+  padding-right: 28px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 30px;
+  }
 }
