--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -8,19 +8,38 @@
     background-color: $white-color;
     order: 2;
   }
+
+  &--opened {
+    max-height: 400px;
+    transition: max-height 0.5s ease-out;
+  }
+
+  &--closed {
+    max-height: 0;
+    transition: max-height 0.5s ease-out;
+  }
 }
 
 // Базовые стили для кнопки переключения мобильного меню
 .main-nav__toggle {
   position: absolute;
-  top: 0;
-  right: 0;
-  z-index: 2;
+  top: 15px;
+  right: 15px;
   cursor: auto;
+  border: none;
+  padding: 0;
+  z-index: 1;
 
   @media (min-width: $tablet-width) {
     display: none;
   }
+}
+
+.main-nav__svg {
+  fill: $white-color;
+  width: 23px;
+  height: 23px;
+  background-color: $main-color;
 }
 
 .main-nav__list {
@@ -33,6 +52,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    text-align: center;
   }
 
   a {
@@ -57,8 +77,20 @@
   }
 }
 
-@media (min-width: $desktop-width) {
-  .main-nav__wrapper {
+.main-nav__wrapper {
+  @media (min-width: $tablet-width) {
+    width: 723px;
+
+    :first-child {
+      padding-left: 9px;
+    }
+
+    :last-child {
+      padding-right: 6px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
