--- a/source/sass/blocks/photo-video.scss
+++ b/source/sass/blocks/photo-video.scss
@@ -1,9 +1,40 @@
 .photo-video__cover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  position: relative;
   background: url("../img/bg-back-mobile@1x.jpg") no-repeat;
-  background-color: $main-color;
+  background-color: #46494e;
+  background-position: 60% 90%;
+  max-height: 159px;
+
+  &::after {
+    content: "";
+    display: block;
+    background-size: cover;
+    background-position: bottom;
+    background-image: url("../img/bg-intro-triangle-mobile.svg");
+    position: absolute;
+    width: 100%;
+    height: 57px;
+    bottom: 0;
+  }
 
   @media (min-width: $tablet-width) {
     min-height: 289px;
-    width: 100vw;
+    width: 100%;
+    background: url("../img/bg-back-tablet@1x.jpg") no-repeat;
+    background-size: cover;
+    background-position: bottom;
+
+    &::after {
+      background-image: url("../img/bg-intro-triangle-tablet.svg");
+    }
   }
+}
+
+.photo-video__inscription {
+  max-width: 229px;
+  margin-left: auto;
+  margin-right: auto;
 }
