--- a/source/sass/blocks/road-item.scss
+++ b/source/sass/blocks/road-item.scss
@@ -1,8 +1,24 @@
+.road-item {
+  border-bottom: 1px solid #d6d6d6;
+}
+
 .road-item__section {
   text-align: center;
+  padding-top: 30px;
+  padding-bottom: 24px;
 
   @media (min-width: $tablet-width) {
     padding-top: 42px;
     padding-bottom: 41px;
   }
+}
+
+.road-item__number {
+  margin: 0;
+  padding-top: 8px;
+}
+
+.road-item__slogan {
+  margin: 0;
+  padding-top: 15px;
 }
