--- a/source/sass/blocks/square-item.scss
+++ b/source/sass/blocks/square-item.scss
@@ -1,9 +1,25 @@
+.square-item {
+  border-bottom: 1px solid #d6d6d6;
+}
+
+// border-width border-style border-color|initial|inherit;
 .square-item__section {
   text-align: center;
-  // margin-left: 26px;
+  padding-top: 22px;
+  padding-bottom: 24px;
 
   @media (min-width: $tablet-width) {
     padding-top: 42px;
     padding-bottom: 63px;
   }
+}
+
+.square-item__number {
+  margin: 0;
+  padding-top: 8px;
+}
+
+.square-item__slogan {
+  margin: 0;
+  padding-top: 15px;
 }
