--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -4,10 +4,22 @@
   line-height: 21px;
   text-transform: uppercase;
   font-family: "PT Sans", "Arial", sans-serif;
+  background-color: $white-color;
 }
 
 .page__body {
   min-height: 100%;
-  margin: 0;
   color: $black-color;
+  padding: 0;
+  height: 100%;
+}
+
+.page__container {
+  margin: 0 auto;
+  background-color: white;
+  box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2);
+  display: flex;
+  flex-direction: column;
+  min-height: 100%;
+  position: relative;
 }
