--- a/source/sass/blocks/photo-video.scss
+++ b/source/sass/blocks/photo-video.scss
@@ -31,6 +31,18 @@
       background-image: url("../img/bg-intro-triangle-tablet.svg");
     }
   }
+
+  @media (min-width: $desktop-width) {
+    min-height: 303px;
+    width: 100%;
+    background: url("../img/bg-back-desktop@1x.jpg") no-repeat;
+    background-size: cover;
+    background-position: bottom;
+
+    &::after {
+      background-image: url("../img/bg-intro-triangle-desktop.svg");
+    }
+  }
 }
 
 .photo-video__inscription {
