--- a/source/sass/blocks/vast-card.scss
+++ b/source/sass/blocks/vast-card.scss
@@ -3,25 +3,13 @@
   @media (min-width: $tablet-width) {
     grid-column: 1 / 3;
   }
-}
 
-.vast-card__description {
-  @media (min-width: $tablet-width) {
-    padding-left: 20px;
-    padding-top: 22px;
-    padding-bottom: 15px;
+  @media (min-width: $desktop-width) {
+    grid-column: 1 / 4;
   }
 }
 
 .vast-card__content {
-  @media (min-width: $tablet-width) {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 100%;
-    background-color: $grey-color;
-  }
-
   @media (min-width: $desktop-width) {
     background-color: $black-color;
     opacity: 30%;
@@ -33,6 +21,13 @@
 .vast-card__review {
   @media (min-width: $desktop-width) {
     align-self: flex-end;
+    padding-top: 30px;
+    padding-bottom: 26px;
+  }
+}
+
+.vast-card__like-count {
+  @media (min-width: $desktop-width) {
     padding-top: 30px;
     padding-bottom: 26px;
   }
