--- a/source/sass/blocks/impressions-fieldset.scss
+++ b/source/sass/blocks/impressions-fieldset.scss
@@ -1,3 +1,8 @@
+.impressions-fieldset {
+  border: 0 none;
+  border-bottom: 1px solid #e5e5e5;
+}
+
 .impressions-fieldset__legend {
   @include font-titles-black;
 }
@@ -5,8 +10,4 @@
 .choice-block__label {
   @include font-titles-black;
   text-transform: none;
-}
-
-.impressions-fieldset {
-  border: 0 none;
 }
