--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -23,7 +23,7 @@
 @import "blocks/map.scss";
 
 // Blocks page photo.html
-@import "blocks/photo-video.scss";
+@import "blocks/intro-background.scss";
 @import "blocks/album-section.scss";
 @import "blocks/card.scss";
 @import "blocks/bridge-card.scss";
@@ -34,7 +34,6 @@
 @import "blocks/road-card.scss";
 
 // Blocks page form.html
-@import "blocks/review-intro.scss";
 @import "blocks/client-review.scss";
 @import "blocks/review-form.scss";
 @import "blocks/introduce-fieldset.scss";
