--- a/source/sass/blocks/client-review.scss
+++ b/source/sass/blocks/client-review.scss
@@ -1,9 +1,20 @@
-// Стили для оформления текста
+.client-review__text {
+  padding-top: 36px;
+  padding-bottom: 17px;
+  border-bottom: 1px solid #e5e5e5;
+}
+
 .client-review__title {
   @include font-titles-black;
   text-align: center;
+  margin: 0;
 }
 
-.client-review__text {
+.client-review__slogan {
+  line-height: 24px;
   text-align: center;
+  margin: 0;
+  padding-top: 26px;
+  padding-left: 17px;
+  padding-right: 15px;
 }
