--- a/source/sass/blocks/contacts-fieldset.scss
+++ b/source/sass/blocks/contacts-fieldset.scss
@@ -5,17 +5,26 @@
 
 .contacts-fieldset {
   border: 0 none;
+  border-bottom: 1px solid #e5e5e5;
 }
 
 .contacts-fieldset__legend {
+  font-weight: bold;
+
   @include font-titles-black;
+
   text-align: center;
+  padding-top: 16px;
+}
+
+.contacts-fieldset__phone {
+  padding-top: 15px;
 }
 
 .phone-block__input,
 .email-block__input {
   @include font-titles-black;
-  display: block;
+
   background-color: $grey-color;
   border: none;
   min-width: 230px;
