--- a/source/sass/blocks/intro-background.scss
+++ b/source/sass/blocks/intro-background.scss
@@ -1,4 +1,5 @@
-.photo-video__cover {
+// Стили для фонов страниц photo.html form.html
+.intro-background__cover {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,7 +46,7 @@
   }
 }
 
-.photo-video__inscription {
+.intro-background__inscription {
   max-width: 229px;
   margin-left: auto;
   margin-right: auto;
