--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -17,7 +17,7 @@
 .page__container {
   margin: 0 auto;
   background-color: white;
-  box-shadow: 0px 5px 15px 0 rgba(0, 1, 1, 0.2);
+  box-shadow: rgba(0, 1, 1, 0.2);
   display: flex;
   flex-direction: column;
   min-height: 100%;
