--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -47,6 +47,7 @@
   padding: 0;
   list-style-type: none;
   text-decoration: none;
+  width: 100%;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -69,7 +70,6 @@
 @media (min-width: $tablet-width) {
   .main-nav__wrapper {
     margin: 0 auto;
-    width: 723px;
   }
 
   .main-nav__toggle {
@@ -78,23 +78,10 @@
 }
 
 .main-nav__wrapper {
-  @media (min-width: $tablet-width) {
-    width: 723px;
-
-    :first-child {
-      padding-left: 9px;
-    }
-
-    :last-child {
-      padding-right: 6px;
-    }
-  }
-
   @media (min-width: $desktop-width) {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 1069px;
     margin: 0 auto;
   }
 }
