--- a/source/sass/blocks/page.scss
+++ b/source/sass/blocks/page.scss
@@ -10,6 +10,7 @@
 .page__body {
   min-height: 100%;
   color: $black-color;
+  background-color: #f2f2f2;
   padding: 0;
   height: 100%;
 }
@@ -17,9 +18,10 @@
 .page__container {
   margin: 0 auto;
   background-color: white;
-  box-shadow: rgba(0, 1, 1, 0.2);
   display: flex;
   flex-direction: column;
   min-height: 100%;
   position: relative;
+  max-width: 1200px;
+  box-shadow: 0 0 15px 5px rgba(0, 1, 1, 0.2);
 }
