--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -7,9 +7,11 @@
     text-decoration: none;
     padding-top: 10px;
     padding-bottom: 5px;
-    border-top: 1px solid $white-color;
+    border-bottom: 1px solid #ffffff;
+    // box-shadow: 0px 1px 0px 0px (#010101, 20%);
 
     @media (min-width: $tablet-width) {
+      color: $black-color;
       padding-top: 16px;
       padding-bottom: 14px;
 
