--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -24,8 +24,10 @@
 
 // button
 
-@media (min-width: $mobile-width-only) {
-  .main-nav__button {
+.main-nav__button {
+  display: none;
+
+  @media (max-width: $mobile-width-only) {
     display: block;
     margin: 0;
     padding: 0;
@@ -36,55 +38,59 @@
     top: 15px;
     right: 15px;
     cursor: pointer;
-    z-index: 1;
+    z-index: 2;
+  }
+}
+
+// icon
+
+@media (max-width: $mobile-width-only) {
+  .main-nav__icon-menu,
+  .main-nav__icon-cross {
+    width: 23px;
+    height: 23px;
   }
 
-  // icon
-
-  @media (min-width: $mobile-width-only) {
-    .main-nav__icon-menu,
-    .main-nav__icon-cross {
-      fill: $white-color;
-      width: 23px;
-      height: 23px;
-    }
-
-    .main-nav__icon-menu,
-    .main__button--open .main-nav__icon-cross {
-      display: block;
-    }
-
-    .main-nav__icon-cross,
-    .main__button--open .main-nav__icon-menu {
-      display: none;
-    }
+  .main-nav__icon-cross {
+    fill: $white-color;
   }
 
-  @media (min-width: $desktop-width) {
-    .main-nav__button {
-      display: none;
-    }
+  .main-nav__icon-menu {
+    fill: $main-color;
   }
 
-  .main-nav__list {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    text-decoration: none;
-    width: 100%;
+  .main-nav__icon-menu,
+  .main-nav__button--open .main-nav__icon-cross {
+    display: block;
+  }
 
-    @media (min-width: $tablet-width) {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      text-align: center;
-    }
+  .main-nav__icon-cross,
+  .main-nav__button--open .main-nav__icon-menu {
+    display: none;
+  }
+}
 
-    @media (min-width: $tablet-width) {
-      color: $black-color;
-      font-size: 14px;
-      line-height: 26px;
-    }
+@media (min-width: $desktop-width) {
+  .main-nav__button {
+    display: none;
+  }
+}
+
+.main-nav__list {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+  text-decoration: none;
+  width: 100%;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    text-align: center;
+    color: $black-color;
+    font-size: 14px;
+    line-height: 26px;
   }
 }
 
