--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -10,6 +10,10 @@
     border-bottom: 1px solid #ffffff;
     // box-shadow: 0px 1px 0px 0px (#010101, 20%);
 
+    @media (max-width: $mobile-width-only) {
+      color: $white-color;
+    }
+
     @media (min-width: $tablet-width) {
       color: $black-color;
       padding-top: 16px;
